# Embed

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
app/src/: main.cpp
app/src/Generator/: CodeGenerator.cpp  CodeGenerator.h  EmbedManager.cpp  EmbedManager.h  FileManager.cpp  FileManager.h  FilePayload.h  HttpRequestHeader.h  HttpRequestHeaderEmbed.h  HttpRequestSource.h  HttpRequestSourceEmbed.h
app/src/Layers/: AppLayer.cpp  AppLayer.h
app/tests/: CMakeLists.txt  test_codegenerator.cpp
